--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
     <input type="passwordlogin" name="passwordlogin" id="passwordlogin" required><br>
     </div>
     <input type="submit" value="Sign In" id="submitlogin">
+    <button class="gotosignup">Sign Up</button>
     </form>
         </div>
     </div>
@@ -36,7 +37,7 @@
 
 
 
-    <script type="module" src="app.js">
+    <script type="module" src="login.js">
 
     </script>
 </body>
